dernier commit avant rendu1erdepot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.servlet.multipart.max-file-size=20971520
 spring.servlet.multipart.max-request-size=20971520
 file.upload.path=static/images/
 logging.level.root=INFO
+server.port=${PORT}
+
 
 
