--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!/target/TEST33-0.0.1-SNAPSHOT.jar
+!/target/TEST33-0.0.1-SNAPSHOT.jar.original
+
 
 ### STS ###
 .apt_generated
